2002-10-18  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-mips.c (md_begin): Add $fcc registers to the symbol
	table as register names.

2002-10-18  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/tc-s390.c (md_parse_option): Set s390_arch_size to 32
	for option -m31.

2002-10-18  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* expr.c (operand): Add support for n.nn flonums.

2002-10-17  Johannes Stezenbach  <js@convergence.de>

	* itbl-parse.y (entry): Provide empty action.

2002-10-16  Alan Modra  <amodra@bigpond.net.au>

	* configure.in (BFDVER_H): Set and subst.
	* dep-in.sed: Replace bfdver.h with $(BFDVER_H).
	* Makefile.am: Run "make dep-am".
	(BFDVER_H): Define.
	* configure: Regenerate.
	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regenerate.

2002-10-15  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-i386.h (EXTERN_FORCE_RELOC): Define.
	(MD_APPLY_SYM_VALUE): Define for PE too.

2002-10-14  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	(CPU_OBJ_VALID): sh64 coff is invalid.
	* as.c: #include "bfdver.h".
	* Makefile.in: Regenerate.
	* config.in: Regenerate.

2002-10-14  Momchil Velikov  <velco@fadata.bg>

	* config/tc-v850.c (CHECK_): Remove token pasting operator.

2002-10-14  Richard Sandiford  <rsandifo@redhat.com>

	* configure.in (mips64vr-elf, mips64vrel-elf): New config.
	* configure: Regenerate.

2002-10-13  Eric Christopher  <echristo@redhat.com>
	    Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-mips.c (s_gpdword): New function.
	(mips_pseudo_table): Add .gpdword.
	(mips_need_elf_addend_fixup): never for NEWABI.
	(md_apply_fix3): Don't mark BFD_RELOC64 after GPREL16 or
	GPREL32 as done.
	(s_cpadd): Generate .cpadd on NEWABI.

2002-10-12  Elias Athanasopoulos  <eathan@otenet.gr>

	* config/tc-ppc.c (ppc_cleanup): Make 'i' unsigned int.

2002-10-12  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-mips.h (mips_relax_frag): Take segment as argument.
	(md_relax_frag): Adjust macro.